# Qt-Learning

./: .clangd  .gitignore  CMakeLists.txt  README.md
.zed/: settings.json  tasks.json
Project_01_ArgumentParser/: CMakeLists.txt  CMakePresets.json  README.md
Project_01_ArgumentParser/src/: ArgumentParser.cpp  ArgumentParser.h  main.cpp
Project_01_ArgumentParser/src/tests/: test.cpp
Project_02_TextEditor/: CMakeLists.txt  README.md
Project_02_TextEditor/src/: FindReplaceDialog.cpp  FindReplaceDialog.h  LineNumber.cpp  LineNumber.h  MainWindow.cpp  MainWindow.h  SyntaxHighlighter.cpp  SyntaxHighlighter.h  main.cpp
Project_03_ChatClient/: CMakeLists.txt  README.md
Project_03_ChatClient/src/: ClientConnection.cpp  ClientConnection.h  MainWindow.cpp  MainWindow.h  main.cpp
Project_03_ChatServer/: CMakeLists.txt  README.md
Project_03_ChatServer/src/: ChatServer.cpp  ChatServer.h  main.cpp
Project_04_MusicPlayer/: CMakeLists.txt  README.md
Project_04_MusicPlayer/src/: MainWindow.cpp  MainWindow.h  MusicPlayer.cpp  MusicPlayer.h  main.cpp
Project_05_TaskManager/: CMakeLists.txt  README.md
Project_06_DatabaseClient/: CMakeLists.txt  README.md
Project_07_GameEngine/: CMakeLists.txt  README.md
